# HSSFLDON

./: .gitignore  README.md  hssfldon.sh  pyproject.toml  requirements.txt  run.ipynb
adapters/clients/Client_1/: README.md
adapters/global/: README.md  adapter_config.json  adapter_model.safetensors
data/: HSSFLDON_DataPreparation.ipynb
data/clients/: Client_0.parquet  Client_1.parquet  Client_2.parquet  Client_3.parquet
data/server/: server.parquet
data/test/: test.parquet
experimentation/: experimentation.md  static_oracle_mapping.ipynb
models/model_base/: config.json
models/model_head/: classification_head_client_0  classification_head_client_1  classification_head_client_1.pt  classification_head_client_2  classification_head_client_2.pt  classification_head_global.pt
results/: HSSFLDON_DisplayResults.ipynb  avgdevianceconfidence_results.json  model_evaluation_history.json  newmetrics_results.json  neworaclesplit_results.json  v4_normlayer_results.json
src/client/: client_main.py
src/common/: hssfldon_logger.py
src/hssfldon/client/: client_app.py  client_main.py
src/hssfldon/common/: hssfldon_data.py  hssfldon_enum.py  hssfldon_logger.py  (+1 more)
src/server/: server_app.py
unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
(+4 files in other folders)
