[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hssfldon"
version = "0.1.0"
description = "Hybrid Semi-Supervised Federated Learning with Distributed Oracle Networks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"python-dotenv>=1.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]